--- a/index.html
+++ b/index.html
@@ -21,55 +21,57 @@
             <section class="section1">
                 <div data-slide="slide1" class="slide1">
                     <header class="header-grid"><!-------------------ESTRUTURA DO HEADER-->
-                        <a href="#" class="tlogo">Fermow's</a>
-                        <nav>
-                            <ul class="menu1">
-                                <li>
-                                    <a href="#">clothing</a>
-                                    <ul>
-                                        <li><a href="#">vestidos</a></li>
-                                        <li><a href="#">macacões</a></li>
-                                        <li><a href="#">calças</a></li>
-                                        <li><a href="#">shorts</a></li>
-                                        <li><a href="#">conjuntos</a></li>
-                                        <li><a href="#">blusas</a></li>
-                                        <li><a href="#">camisas</a></li>
-                                        <li><a href="#">saias</a></li>
-                                        <li><a href="#">body</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">bags</a></li>
-                                <li><a href="#">scarves</a></li>
-                                <li><a href="#">accessories</a></li>
-                                <li><a href="#">shoes</a></li>
-                                <li><a href="#">make-up</a></li>
-                                <li><a href="#">gifts</a></li>
-                                <li><a href="#">for you</a></li>
-                            </ul>
-                        </nav>
-                        <nav>
-                            <ul class="menu2">
-                                <li>
-                                    <a><span class="material-icons-outlined">
-                                        search
-                                        </span></a>
-                                    <ul>
-                                        <li><input type="search" name="" id="" placeholder="search"></li>
-                                    </ul>
-                                </li>
-                                <li><a><span class="material-icons-outlined">
-                                    account_circle
-                                    </span></a></li>
-                                <li>
-                                    <a href="#"><span class="material-icons-outlined">
-                                        shopping_cart
-                                        </span></a>
-                                    <ul>
-                                        <li><a href="#">your bag is empty</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </nav>
+                        <div class="centralizador-menu-header">
+                            <a href="#" class="tlogo">Fermow's</a>
+                            <nav>
+                                <ul class="menu1">
+                                    <li>
+                                        <a href="#">clothing</a>
+                                        <ul>
+                                            <li><a href="#">vestidos</a></li>
+                                            <li><a href="#">macacões</a></li>
+                                            <li><a href="#">calças</a></li>
+                                            <li><a href="#">shorts</a></li>
+                                            <li><a href="#">conjuntos</a></li>
+                                            <li><a href="#">blusas</a></li>
+                                            <li><a href="#">camisas</a></li>
+                                            <li><a href="#">saias</a></li>
+                                            <li><a href="#">body</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">bags</a></li>
+                                    <li><a href="#">scarves</a></li>
+                                    <li><a href="#">accessories</a></li>
+                                    <li><a href="#">shoes</a></li>
+                                    <li><a href="#">make-up</a></li>
+                                    <li><a href="#">gifts</a></li>
+                                    <li><a href="#">for you</a></li>
+                                </ul>
+                            </nav>
+                            <nav>
+                                <ul class="menu2">
+                                    <li>
+                                        <a><span class="material-icons-outlined">
+                                            search
+                                            </span></a>
+                                        <ul>
+                                            <li><input type="search" name="" id="" placeholder="search"></li>
+                                        </ul>
+                                    </li>
+                                    <li><a><span class="material-icons-outlined">
+                                        account_circle
+                                        </span></a></li>
+                                    <li>
+                                        <a href="#"><span class="material-icons-outlined">
+                                            shopping_cart
+                                            </span></a>
+                                        <ul>
+                                            <li><a href="#">your bag is empty</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
                     </header>
                     <div class="slide-itens"><!--1920x1200-->
                         <img src="./IMG/ROUPAS/slide1.png" alt="img1">
@@ -86,10 +88,17 @@
             </section>
             <section class="section2">
                 <div class="area-text">
-                    <div class="text-section2"><a href="#">texto teste</a></div>
+                    <div class="text-section2">
+                        <a href="#">T-shirts & Dresses</a>
+                        <h1 href="#">SHOP THE COLLECTION</h1>
+                    </div>
                 </div>
                 <div data-slide="area-slide2" class="area-slide2">
                     <div class="slide2-itens">
+                        <img src="./IMG/ROUPAS/slide1.png" alt="img1">
+                        <img src="./IMG/ROUPAS/slide2.png" alt="img2">
+                        <img src="./IMG/ROUPAS/slide3.png" alt="img3">
+                        <img src="./IMG/ROUPAS/slide4.png" alt="img4">
                         <img src="./IMG/ROUPAS/slide2.png" alt="img2">
                         <img src="./IMG/ROUPAS/slide4.png" alt="img4">
                     </div>
@@ -101,11 +110,17 @@
                 </div>
             </section>
             <section class="section3">
-                <div class="fotoS3">
-                    <img src="./IMG/imgteste/2.jpg" alt="imgt2">
-                    <div class="menuzinho1">
-                        <a href="#">VISIT THE WORLD OF OLYMPIA POP-UPS</a>
-                        <a href="#" id="aPrincipal">DISCOVER</a>
+                <div class="conteudoS3">
+                    <!-- <img src="./IMG/imgteste/2.jpg" alt="imgt2"> -->
+                    <!-- <div class="menuzinho1"> -->
+                        <!-- <a href="#">VISIT THE WORLD OF OLYMPIA POP-UPS</a> -->
+                        <!-- <a href="#" id="aPrincipal">DISCOVER</a> -->
+                    <!-- </div> -->
+                    <div class="textS3">
+                        <div class='menuzinho'>
+                            <a href="#">T-shirts & Dresses</a>
+                            <h1 href="#">SHOP THE COLLECTION</h1>   
+                        </div>
                     </div>
                 </div>
             </section>
