--- a/index.html
+++ b/index.html
@@ -19,79 +19,89 @@
     <div class="estrutura-geral-grid">
         <section class="section-main"><!--------------------------------------ESTRUTURA DA SECTION-->
             <section class="section1">
+                <header class="header-grid">
+                    <div class="centralizador-menu-header">
+                        <a href="#" class="tlogo">Fermow's</a>
+                        <nav>
+                            <ul class="menu1">
+                                <li>
+                                    <a href="#">clothing</a>
+                                    <ul>
+                                        <li><a href="#">vestidos</a></li>
+                                        <li><a href="#">macacões</a></li>
+                                        <li><a href="#">calças</a></li>
+                                        <li><a href="#">shorts</a></li>
+                                        <li><a href="#">conjuntos</a></li>
+                                        <li><a href="#">blusas</a></li>
+                                        <li><a href="#">camisas</a></li>
+                                        <li><a href="#">saias</a></li>
+                                        <li><a href="#">body</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">bags</a></li>
+                                <li><a href="#">scarves</a></li>
+                                <li><a href="#">accessories</a></li>
+                                <li><a href="#">shoes</a></li>
+                                <li><a href="#">make-up</a></li>
+                                <li><a href="#">gifts</a></li>
+                                <li><a href="#">for you</a></li>
+                            </ul>
+                        </nav>
+                        <nav>
+                            <ul class="menu2">
+                                <li>
+                                    <a><span class="material-icons-outlined">
+                                        search
+                                        </span></a>
+                                    <ul>
+                                        <li><input type="search" name="" id="" placeholder="search"></li>
+                                    </ul>
+                                </li>
+                                <li><a><span class="material-icons-outlined">
+                                    account_circle
+                                    </span></a></li>
+                                <li>
+                                    <a href="#"><span class="material-icons-outlined">
+                                        shopping_cart
+                                        </span></a>
+                                    <ul>
+                                        <li><a href="#">your bag is empty</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </header>
                 <div data-slide="slide1" class="slide1">
 
-                    <div class="slide-itens"><!--1920x1200-->
+                    <div class="slide-itens">
                         <img src="./IMG/ROUPAS/slide1.png" alt="img1">
                         <img src="./IMG/ROUPAS/slide2.png" alt="img2">
                         <img src="./IMG/ROUPAS/slide3.png" alt="img3">
                         <img src="./IMG/ROUPAS/slide4.png" alt="img4">
                     </div>
                     <nav class="slide-nav">
-                        <header class="header-grid"><!-------------------ESTRUTURA DO HEADER-->
-                            <div class="centralizador-menu-header">
-                                <a href="#" class="tlogo">Fermow's</a>
-                                <nav>
-                                    <ul class="menu1">
-                                        <li>
-                                            <a href="#">clothing</a>
-                                            <ul>
-                                                <li><a href="#">vestidos</a></li>
-                                                <li><a href="#">macacões</a></li>
-                                                <li><a href="#">calças</a></li>
-                                                <li><a href="#">shorts</a></li>
-                                                <li><a href="#">conjuntos</a></li>
-                                                <li><a href="#">blusas</a></li>
-                                                <li><a href="#">camisas</a></li>
-                                                <li><a href="#">saias</a></li>
-                                                <li><a href="#">body</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">bags</a></li>
-                                        <li><a href="#">scarves</a></li>
-                                        <li><a href="#">accessories</a></li>
-                                        <li><a href="#">shoes</a></li>
-                                        <li><a href="#">make-up</a></li>
-                                        <li><a href="#">gifts</a></li>
-                                        <li><a href="#">for you</a></li>
-                                    </ul>
-                                </nav>
-                                <nav>
-                                    <ul class="menu2">
-                                        <li>
-                                            <a><span class="material-icons-outlined">
-                                                search
-                                                </span></a>
-                                            <ul>
-                                                <li><input type="search" name="" id="" placeholder="search"></li>
-                                            </ul>
-                                        </li>
-                                        <li><a><span class="material-icons-outlined">
-                                            account_circle
-                                            </span></a></li>
-                                        <li>
-                                            <a href="#"><span class="material-icons-outlined">
-                                                shopping_cart
-                                                </span></a>
-                                            <ul>
-                                                <li><a href="#">your bag is empty</a></li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </header>
                         <div class="slide-thumb"></div>
-                        <button class="slide-prev">prev</button>
-                        <button class="slide-next">next</button>
+                        <button class="slide-prev"><a><span class="material-icons-outlined">
+                            arrow_back_ios
+                            </span></a></button>
+                        <button class="slide-next"><a><span class="material-icons-outlined">
+                            arrow_forward_ios
+                            </span></a></button>
+                        <a href="#" class="subTituloNav-section1">T-shirts & Dresses</a>
+                        <a href="#" class="TituloNav-section1">SHOP THE COLLECTION</a>
                     </nav>
+                    <!-- <div class='menuzinho-section1'>
+                        <a href="#">T-shirts & Dresses</a>
+                        <h1 href="#">SHOP THE COLLECTION</h1>   
+                    </div> -->
                 </div>
             </section>
             <section class="section2">
                 <div class="area-text">
                     <div class="text-section2">
-                        <a href="#">T-shirts & Dresses</a>
-                        <h1 href="#">SHOP THE COLLECTION</h1>
+                        <a href="#"class="subTituloNav-section2">T-shirts & Dresses</a>
+                        <a href="#"class="TituloNav-section2">SHOP THE COLLECTION</a>
                     </div>
                 </div>
                 <div data-slide="area-slide2" class="area-slide2">
@@ -113,8 +123,8 @@
             <section class="section3">
                 <div class="conteudoS3">
                         <div class='menuzinho'>
-                            <a href="#">T-shirts & Dresses</a>
-                            <h1 href="#">SHOP THE COLLECTION</h1>   
+                            <a href="#"class="subTituloNav-section3">T-shirts & Dresses</a>
+                            <h1 href="#"class="TituloNav-section3">SHOP THE COLLECTION</h1>   
                         </div>
                 </div>
             </section>
