--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="estrutura-geral-grid">
-        <section class="section-main"><!--------------------------------------ESTRUTURA DA SECTION-->
+        <section class="section-main">
             <section class="section1">
                 <header class="header-grid">
                     <div class="centralizador-menu-header">
@@ -91,10 +91,6 @@
                         <a href="#" class="subTituloNav-section1">T-shirts & Dresses</a>
                         <a href="#" class="TituloNav-section1">SHOP THE COLLECTION</a>
                     </nav>
-                    <!-- <div class='menuzinho-section1'>
-                        <a href="#">T-shirts & Dresses</a>
-                        <h1 href="#">SHOP THE COLLECTION</h1>   
-                    </div> -->
                 </div>
             </section>
             <section class="section2">
@@ -142,7 +138,7 @@
                 </div>
             </section>
         </section>
-        <footer class="footer-grid"><!-----------------------------------------ESTRUTURA DO FOOTER-->
+        <footer class="footer-grid">
             <div id="f1">
                 <div>
                     <h1>Email Sign-Up</h1>
