--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <section class="section1">
                 <header class="header-grid">
                     <div class="centralizador-menu-header">
-                        <a href="#" class="tlogo">Fermow's</a>
+                        <div class="centralizadorFlex-menu-header">
+                            <a href="#" class="tlogo">Fermow's</a>
                         <nav>
                             <ul class="menu1">
                                 <li>
@@ -70,6 +71,7 @@
                                 </li>
                             </ul>
                         </nav>
+                        </div>
                     </div>
                 </header>
                 <div data-slide="slide1" class="slide1">
@@ -120,7 +122,7 @@
                 <div class="conteudoS3">
                         <div class='menuzinho'>
                             <a href="#"class="subTituloNav-section3">T-shirts & Dresses</a>
-                            <h1 href="#"class="TituloNav-section3">SHOP THE COLLECTION</h1>   
+                            <a href="#"class="TituloNav-section3">SHOP THE COLLECTION</a>   
                         </div>
                 </div>
             </section>
