--- a/index.html
+++ b/index.html
@@ -23,54 +23,54 @@
                     <div class="centralizador-menu-header">
                         <div class="centralizadorFlex-menu-header">
                             <a href="#" class="tlogo">Fermow's</a>
-                        <nav>
-                            <ul class="menu1">
-                                <li>
-                                    <a href="#">clothing</a>
-                                    <ul>
-                                        <li><a href="#">vestidos</a></li>
-                                        <li><a href="#">macacões</a></li>
-                                        <li><a href="#">calças</a></li>
-                                        <li><a href="#">shorts</a></li>
-                                        <li><a href="#">conjuntos</a></li>
-                                        <li><a href="#">blusas</a></li>
-                                        <li><a href="#">camisas</a></li>
-                                        <li><a href="#">saias</a></li>
-                                        <li><a href="#">body</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">bags</a></li>
-                                <li><a href="#">scarves</a></li>
-                                <li><a href="#">accessories</a></li>
-                                <li><a href="#">shoes</a></li>
-                                <li><a href="#">make-up</a></li>
-                                <li><a href="#">gifts</a></li>
-                                <li><a href="#">for you</a></li>
-                            </ul>
-                        </nav>
-                        <nav>
-                            <ul class="menu2">
-                                <li>
-                                    <a><span class="material-icons-outlined">
-                                        search
-                                        </span></a>
-                                    <ul>
-                                        <li><input type="search" name="" id="" placeholder="search"></li>
-                                    </ul>
-                                </li>
-                                <li><a><span class="material-icons-outlined">
-                                    account_circle
-                                    </span></a></li>
-                                <li>
-                                    <a href="#"><span class="material-icons-outlined">
-                                        shopping_cart
-                                        </span></a>
-                                    <ul>
-                                        <li><a href="#">your bag is empty</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </nav>
+                            <nav>
+                                <ul class="menu1">
+                                    <li>
+                                        <a href="#">clothing</a>
+                                        <ul>
+                                            <li><a href="#">vestidos</a></li>
+                                            <li><a href="#">macacões</a></li>
+                                            <li><a href="#">calças</a></li>
+                                            <li><a href="#">shorts</a></li>
+                                            <li><a href="#">conjuntos</a></li>
+                                            <li><a href="#">blusas</a></li>
+                                            <li><a href="#">camisas</a></li>
+                                            <li><a href="#">saias</a></li>
+                                            <li><a href="#">body</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">bags</a></li>
+                                    <li><a href="#">scarves</a></li>
+                                    <li><a href="#">accessories</a></li>
+                                    <li><a href="#">shoes</a></li>
+                                    <li><a href="#">make-up</a></li>
+                                    <li><a href="#">gifts</a></li>
+                                    <li><a href="#">for you</a></li>
+                                </ul>
+                            </nav>
+                            <nav>
+                                <ul class="menu2">
+                                    <li>
+                                        <a><span class="material-icons-outlined">
+                                            search
+                                            </span></a>
+                                        <ul>
+                                            <li><input type="search" name="" id="" placeholder="search"></li>
+                                        </ul>
+                                    </li>
+                                    <li><a><span class="material-icons-outlined">
+                                        account_circle
+                                        </span></a></li>
+                                    <li>
+                                        <a href="#"><span class="material-icons-outlined">
+                                            shopping_cart
+                                            </span></a>
+                                        <ul>
+                                            <li><a href="#">your bag is empty</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </nav>
                         </div>
                     </div>
                 </header>
@@ -96,8 +96,8 @@
                 </div>
             </section>
             <section class="section2">
-                <div class="area-text">
-                    <div class="text-section2">
+                <div class="area-text" data-animeSection2End="End-Start">
+                    <div class="text-section2" data-animeSection2Sticky="sticky">
                         <a href="#"class="subTituloNav-section2">T-shirts & Dresses</a>
                         <a href="#"class="TituloNav-section2">SHOP THE COLLECTION</a>
                     </div>
