--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 </div>
             </section>
             <section class="section2">
-                <div class="area-text" data-animeSection2End="End-Start">
-                    <div class="text-section2" data-animeSection2Sticky="sticky">
+                <div class="area-text">
+                    <div class="text-section2">
                         <a href="#"class="subTituloNav-section2">T-shirts & Dresses</a>
                         <a href="#"class="TituloNav-section2">SHOP THE COLLECTION</a>
                     </div>
@@ -127,14 +127,14 @@
                 </div>
             </section>
             <section class="section4">
-                <div data-slide="slide4" id="slide4">
+                <div id="slide4">
                         <nav>
                             <ul>
-                                <li><a href="#">women</a></li>
-                                <li><a href="#">bags</a></li>
-                                <li><a href="#">men</a></li>
-                                <li><a href="#">coats</a></li>
-                                <li><a href="#">shoes</a></li>
+                                <li><a href="#" id="section4img1">women</a></li>
+                                <li><a href="#" id="section4img2">bags</a></li>
+                                <li><a href="#" id="section4img3">men</a></li>
+                                <li><a href="#" id="section4img4">coats</a></li>
+                                <li><a href="#" id="section4img5">shoes</a></li>
                             </ul>
                         </nav>
                 </div>
