--- a/index.html
+++ b/index.html
@@ -102,20 +102,17 @@
                         <a href="#"class="TituloNav-section2">SHOP THE COLLECTION</a>
                     </div>
                 </div>
-                <div data-slide="area-slide2" class="area-slide2">
+                <div class="area-slide2">
                     <div class="slide2-itens">
-                        <img src="./IMG/ROUPAS/slide1.png" alt="img1">
-                        <img src="./IMG/ROUPAS/slide2.png" alt="img2">
-                        <img src="./IMG/ROUPAS/slide3.png" alt="img3">
-                        <img src="./IMG/ROUPAS/slide4.png" alt="img4">
-                        <img src="./IMG/ROUPAS/slide2.png" alt="img2">
-                        <img src="./IMG/ROUPAS/slide4.png" alt="img4">
+                        <img src="./IMG/ROUPAS/photo10.png" alt="img1">
+                        <img src="./IMG/ROUPAS/photo11.png" alt="img2">
+                        <img src="./IMG/ROUPAS/photo12.png" alt="img3">
+                        <img src="./IMG/ROUPAS/photo13.png" alt="img4">
+                        <img src="./IMG/ROUPAS/photo14.png" alt="img2">
+                        <img src="./IMG/ROUPAS/photo15.png" alt="img4">
+                        <img src="./IMG/ROUPAS/photo10.png" alt="imgClone">
+                        <img src="./IMG/ROUPAS/photo11.png" alt="imgClone">
                     </div>
-                    <nav class="slide2-nav">
-                        <div class="slide2-thumb"></div>
-                        <button class="slide2-prev">prev</button>
-                        <button class="slide2-next">next</button>
-                    </nav>
                 </div>
             </section>
             <section class="section3">
